--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask
 joblib
 numpy
+pandas
 scikit-learn # <-- Reemplaza con el nombre de la librería principal de tu modelo
 gunicorn
 flask-cors
